frontend/test/should_pass/cast_Node.grg
using castModel2;

rule r {
	n:N;
	nn:N;
	
	if{ ((NN)n).aa == ((N)nn).a + uniqueof((Node)nn); }
	
	replace {
		eval {
			nn.a = ((NN)n).aa + ((N)nn).a + uniqueof((Node)nn);
		}
	}
}

